alpm-mtree/tests/parse_error_snapshots/too_long_sha256.snap
---
source: alpm-mtree/tests/parse_errors.rs
description: "#mtree\n/set mode=755\n./testfile sha256digest=0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef0 type=file\n"
expression: error
snapshot_kind: text
---
parse error at line 3, column 25
  |
3 | ./testfile sha256digest=0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef0 type=file
  |                         ^
invalid sha256 hash
expected 64 char long hexadecimal string
